[gd_scene load_steps=8 format=3 uid="uid://dn3ifpgx4o83l"]

[ext_resource type="Script" uid="uid://dtn01exxhmfny" path="res://scenes/clicking manager/clicking_manager.gd" id="1_c07ay"]
[ext_resource type="PackedScene" uid="uid://dvirni55s43hp" path="res://effects/hit_particles.tscn" id="2_88jcx"]
[ext_resource type="Texture2D" uid="uid://dc418wfk6lqyj" path="res://assets/graphics/cursors/resize_d_cross_diagonal.png" id="2_nj7j4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15rgw"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_erscc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ChopCursor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.4, 1.4)]
}

[sub_resource type="Animation" id="Animation_nj7j4"]
resource_name = "click"
length = 0.06
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ChopCursor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.4, 1.4), Vector2(2, 2), Vector2(1.4, 1.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iwi6o"]
_data = {
&"RESET": SubResource("Animation_erscc"),
&"click": SubResource("Animation_nj7j4")
}

[node name="ClickingManager" type="Area2D"]
top_level = true
z_index = 100
script = ExtResource("1_c07ay")
hit_particles = ExtResource("2_88jcx")

[node name="ClickingCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_15rgw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iwi6o")
}

[node name="ChopCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="CursorControl" type="Control" parent="."]
z_index = 10
custom_minimum_size = Vector2(75, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -37.0
offset_top = 25.0
offset_right = 38.0
offset_bottom = 35.0

[node name="CursorProgressbar" type="ProgressBar" parent="CursorControl"]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(75, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 0.5
show_percentage = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ChopCursor" type="Sprite2D" parent="CanvasLayer"]
z_index = 10
texture_filter = 1
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_nj7j4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="ChopCooldownTimer" to="." method="_on_chop_cooldown_timeout"]
